# introlab-ros-pkg

./: CMakeLists.txt  README  index.html
irl_external/manyears/: CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake  mainpage.dox  manifest.xml  rosdep.yaml
irl_external/manyears/catkin_generated/: generate_cached_setup.py  setup_cached.sh
irl_external/manyears/devel/: .catkin  .rosinstall  setup.sh
irl_external/manyears/gtest/: Makefile
manyears_pr2/: CMakeLists.txt  mainpage.dox  manifest.xml
manyears_pr2/data/: pr2.mes
manyears_pr2/launch/: pr2_demo.launch
manyears_pr2/src/: pr2_demo.cpp  turn_toward.cpp  turn_toward.hpp
manyears_ros/: CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake  manifest.xml  manyears_ros.cbp  package.xml
manyears_ros/catkin_generated/: generate_cached_setup.py  setup_cached.sh
manyears_ros/data/: 8sounds_cube.mes
manyears_ros/devel/: .catkin  .rosinstall  setup.sh
manyears_ros/gtest/: Makefile  gtest.cbp
manyears_ros/include/manyears_ros/: AudioStream.h  ManyEarsTrackedAudioSource.h  SourceInfo.h
manyears_ros/launch/: demo_8sounds.launch  manyears_complete_file.launch  manyears_complete_live.launch  manyears_core.launch  manyears_file.launch  manyears_live.launch  manyears_pose.launch  manyears_savestream.launch  pose_exploitation.launch  rt_audio.launch  rt_audio_save_raw.launch
manyears_ros/msg/: AudioStream.msg  ManyEarsTrackedAudioSource.msg  SourceInfo.msg
manyears_ros/msg_gen/lisp/: AudioStream.lisp  ManyEarsTrackedAudioSource.lisp  SourceInfo.lisp  _package.lisp  _package_AudioStream.lisp  _package_ManyEarsTrackedAudioSource.lisp  _package_SourceInfo.lisp  manyears_ros-msg.asd
manyears_ros/src/: CMakeLists.txt  Makefile  cmake_install.cmake  manyears_ros.cpp  manyears_savestream.cpp  rt_audio.cpp  sound_position_exploitation.cpp
manyears_ros/src/manyears_ros/msg/: _AudioStream.py  _ManyEarsTrackedAudioSource.py  _SourceInfo.py  __init__.py
x264_image_transport/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  x264_plugins.xml
x264_image_transport/cfg/: x264Publisher.cfg  x264Subscriber.cfg
x264_image_transport/include/x264_image_transport/: x264_publisher.h  x264_subscriber.h
x264_image_transport/launch/: x264_test_publisher.launch
x264_image_transport/msg/: x264Packet.msg
x264_image_transport/src/: manifest.cpp  x264_publisher.cpp  x264_subscriber.cpp  x264_test_publisher.cpp  x264_test_subscriber.cpp
